<resources>
    <string name="app_name" translatable="false">TodoEkspert</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_login">Enter username</string>
    <string name="login">Login</string>
    <string name="empty_field">This field cannot be empty!</string>
    <string name="title_activity_todo_list">TodoListActivity</string>
    <string name="action_new">Add</string>
    <string name="action_logout">Logout</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="want_to_quit">Do you want to log out?</string>
    <string name="title_activity_add_todo">AddTodoActivity</string>
    <string name="add_todo">Add Todo</string>
    <string name="what_to_be_done">What needs to be done?</string>
    <string name="done">Done</string>
    <string name="action_refresh">Refresh</string>
    <string name="notification_title">New Todos</string>
    <string name="notification_message">New todos: %1$d %2$d</string>
</resources>
