<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.proama.todoekspert.TodoListActivity">

    <item
        android:id="@+id/action_new"
        android:title="@string/action_new"
        android:icon="@drawable/ic_action_new"
        app:showAsAction="always|withText"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="always|withText"
        android:orderInCategory="150"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"
        android:orderInCategory="200"/>



</menu>
