<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <TextView
        android:text="asdfasdf asdfsf a sfs safsaf sfsa f s dfsafsaf sf s f sdfas asdfas fasasd fas ddfsa "
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:singleLine="true"
        android:hint="@string/enter_login"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/passwordEditText"
        android:hint="@string/enter_password"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:layout_marginTop="50dp"
        tools:text="tylko dla testu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:text="@string/login"
        android:layout_marginTop="50dp"
        tools:text="tylko dla testu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
